package DBoW2.proto;

message Node {
  optional int32 node_id = 1;
  optional int32 parent_id = 2;
  optional double weight = 3;
  repeated uint64 node_descriptor = 4;
}